force-app/main/default/objects/Personal_Queue_Info__c/Personal_Queue_Info__c.object-meta.xml
<CustomObject>
    <description>This object is used to store information from acorn related to user assignment in personal queue</description>
    <label>Personal Queue Info</label>
    <nameField>
        <label>Personal Queue Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personal Queue Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>