force-app/main/default/objects/Personal_Queue_Info__c/fields/Acorn_Update_DT__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Update_DT__c</fullName>
    <label>CreatedDate Acorn</label>
    <type>DateTime</type>
</CustomField>