force-app/main/default/objects/Personal_Queue_Info__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseId</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Personal Queue Information</relationshipLabel>
    <relationshipName>Personal_Queue_Information</relationshipName>
    <type>Lookup</type>
</CustomField>