force-app/main/default/objects/Personal_Queue_Info__c/fields/isWorkflowCatUser__c.field-meta.xml
<CustomField>
    <fullName>isWorkflowCatUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It will be true if the record is for CAT User assignment.</description>
    <label>isWorkflowCatUser</label>
    <type>Checkbox</type>
</CustomField>