force-app/main/default/objects/Personal_Queue_Info__c/fields/isWorkflowTeam__c.field-meta.xml
<CustomField>
    <fullName>isWorkflowTeam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It will be true if the record is for Team assignment.</description>
    <label>isWorkflowTeam</label>
    <type>Checkbox</type>
</CustomField>