force-app/main/default/objects/Personal_Queue_Info__c/fields/Workflow_Action__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Action__c</fullName>
    <label>Workflow Action</label>
    <length>50</length>
    <type>Text</type>
</CustomField>