force-app/main/default/objects/Personal_Queue_Info__c/fields/Workflow_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Log_Id__c</fullName>
    <label>Workflow Log Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>