force-app/main/default/objects/Personal_Queue_Info__c/fields/Workflow_TeamUser__c.field-meta.xml
<CustomField>
    <fullName>Workflow_TeamUser__c</fullName>
    <label>Workflow TeamUser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>