force-app/main/default/objects/Personal_Queue_Info__c/fields/Workflow_TeamUserId__c.field-meta.xml
<CustomField>
    <fullName>Workflow_TeamUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workflow TeamUserId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Personal_Queue_Information</relationshipName>
    <type>Lookup</type>
</CustomField>